# matias_django_blog

./: .gitignore  .isort  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cmd_script.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  pyproject.toml  start_dev_server.sh  start_server.sh
.github/workflows/: lint.yml  test.yml
matias_site/: conftest.py  manage.py
matias_site/api/: schema_generation.py  serializers.py  urls.py  views.py
matias_site/api/schemas/: posts_api.yaml
matias_site/api/tests/: conftest.py  test_posts_api.py
matias_site/blog/: admin.py  forms.py  models.py  urls.py  views.py
matias_site/blog/md_posts/: code.md  code_2.md  commands.md
matias_site/blog/migrations/: 0001_initial.py  0002_alter_comment_create_date_alter_post_create_date.py  0003_alter_comment_create_date_alter_post_create_date.py  0004_alter_comment_create_date_alter_post_create_date.py  0005_alter_comment_create_date_alter_post_create_date.py  0006_alter_comment_create_date_alter_post_create_date.py  0007_alter_comment_create_date_alter_post_create_date.py  0008_alter_comment_create_date_alter_post_create_date.py  0009_alter_comment_create_date_alter_post_create_date.py  0010_alter_comment_create_date_alter_post_create_date.py  (+55 more)
matias_site/colis/: apps.py  forms.py  models.py  urls.py  views.py
matias_site/core/: urls.py
matias_site/matias_site/: asgi.py  settings.py  urls.py  wsgi.py
matias_site/posts/: apps.py  serializers.py  urls.py  views.py
matias_site/questions/: models.py  serializers.py  urls.py  views.py
(+30 files in other folders)
