[tool.poetry]
name = "matias_django_blog"
version = "0.1.0"
description = "Matias personal blog & more"
authors = ["Matias Cardenas <cardenasmatias.1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
